k8s/employeeInfo-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeeinfo-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: employeeinfo-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: employeeinfo-app
    spec:
      containers:
        - name: employeeinfo-app
          image: vishalagg90/employeeinfo-app:v3
          ports:
            - containerPort: 3000
