k8s/mongo-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
spec:
  selector:
    app: mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
